@@ -101,6 +101,10 @@ rom_plus3_0, string, strdup( "plus3-0.rom" ),
 rom_plus3_1, string, strdup( "plus3-1.rom" ),
 rom_plus3_2, string, strdup( "plus3-2.rom" ),
 rom_plus3_3, string, strdup( "plus3-3.rom" ),
+rom_plus3e_0, string, strdup( "plus3e-0.rom" ),
+rom_plus3e_1, string, strdup( "plus3e-1.rom" ),
+rom_plus3e_2, string, strdup( "plus3e-2.rom" ),
+rom_plus3e_3, string, strdup( "plus3e-3.rom" ),
 rom_tc2048, string, strdup( "tc2048.rom" ),
 rom_tc2068_0, string, strdup( "tc2068-0.rom" ),
 rom_tc2068_1, string, strdup( "tc2068-1.rom" ),
